cmake_minimum_required(VERSION 3.26)
project(untitled29)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled29 main.cpp
        Player.h
        Player.h
        Board.cpp
        Board.h
        Player.cpp
        Ship.h
        Ship.cpp
        AircraftCarrier.cpp
        Battleship.h
        Battleship.cpp
        Cruiser.h
        Cruiser.cpp
        Destroyer.h
        Destroyer.cpp
        Game.h
        Game.cpp)
